--- a/Blog-pessoal/src/main/resources/application.properties
+++ b/Blog-pessoal/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost/db_blogpessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 #spring.datasource.username=root
-#spring.datasource.password=valdivia10!
+#spring.datasource.password=
 #spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl=true
